# navigation-next

./: README.md
common/c/abpal/: .cproject  .project  abpal_brew.sln  abpal_w32.sln
common/c/abpal/projects/cmake/: CMakeLists.txt
common/c/abservices/: .cproject  .project  abservices_brew.sln  abservices_w32.sln
common/c/abservices/projects/cmake/: CMakeLists.txt
common/c/common/projects/cmake/: CMakeLists.txt
common/c/coreservices/: coreservices_brew.sln  coreservices_w32.sln
common/c/coreservices/projects/cmake/: CMakeLists.txt
common/c/jni/projects/cmake/: CMakeLists.txt
common/c/nbgm/: nbgm_w32.sln
common/c/nbgm/projects/cmake/: CMakeLists.txt
common/c/nbpal/: nbpal_brew.sln  nbpal_w32.sln  nbpal_w32_jni.sln
common/c/nbpal/projects/cmake/: CMakeLists.txt
common/c/nbpal/projects/cmake/android_ndk/: CMakeLists.txt
common/c/nbpal/projects/cmake/iphone/: CMakeLists.txt
common/c/nbpal/projects/cmake/linux/: CMakeLists.txt
common/c/nbpal/projects/cmake/win32/: CMakeLists.txt
common/c/nbservices/: .cproject  .project  nbservices_brew.sln  nbservices_w32.sln
common/c/nbservices/projects/cmake/: CMakeLists.txt
common/c/nbui/: nbui_w32.sln
common/c/nbui/projects/cmake_not_ready/: CMakeLists.txt
common/qt/include/: colorsegment.h  coordinate.h  ltkcontext.h  ltkerror.h  ltkhybridmanager.h  patternsegment.h  qaloglistenerdelegate.h  segmentattribute.h
common/qt/project/: ltkcommon.pro
common/qt/src/: colorsegment.cpp  ltkcontextimpl.cpp  ltkerror.cpp  ltkhybridmanagerimpl.cpp  patternsegment.cpp  place.cpp  qaloglistenerdelegate.cpp  qaloglistenerimpl.cpp  segmentattribute.cpp
contentui/qt/include/: regionallistwidget.h
contentui/qt/project/: contentui.pro
contentui/qt/src/: regionallistcontroller.cpp  regionallistitemwidget.cpp  regionallistwidget.cpp
doc/qt/: AutoRefQtDeveloperGuide-1.docx  AutoReference Qt API Guide R1.0.docx
locationkit/qt/include/: location.h  locationconfiguration.h  locationlistener.h  locationprovider.h
locationkit/qt/project/: locationkit.pro
locationkit/qt/src/: filelocationprovider.cpp  internallistenermanager.cpp  internallocationproviderimpl.cpp  locationprovider.cpp
mapkit3d/c/: map_w32.sln
mapkit3d/c/include/: camera.h  camerahelper.h  mapcircle.h  mapcontroller.h  maplayer.h  mappin.h  maprect2d.h  maptile.h  projection.h
mapkit3d/c/projects/cmake/: CMakeLists.txt
mapkit3d/c/src/: camera.cpp  camerahelper.cpp  mapcircle.cpp  mapcontroller.cpp  maplayer.cpp  mappin.cpp  maprect2d.cpp  maptile.cpp  projection.cpp
mapkit3d/qt/include/: mapdecoration.h  mapoptions.h  mapwidget.h  mapwidgetlistener.h
mapkit3d/qt/project/: mapkit3d.pro
mapkit3d/qt/src/: mapdecoration.cpp  mapwidget.cpp
navigationkit/c/: nav_w32.sln
navigationkit/c/include/: Logger.h  NavApiLaneInformation.h  NavApiListeners.h  NavApiNavUtils.h  NavApiNavigation.h  NavApiPreferences.h  NavApiRouteInformation.h  NavApiRouteOptions.h  NavApiRouteRequest.h  NavApiRouteSummaryInformation.h  NavApiRouteSummaryRequest.h  NavApiSpecialRegionInformation.h  NavApiSpeedLimitInformation.h  NavApiTypes.h
navigationkit/c/projects/cmake/: CMakeLists.txt
navigationkit/c/src/: Detour.cpp  Detour.h  Logger.cpp  ManeuverImpl.cpp  ManeuverImpl.h  NavAnalytics.cpp  NavAnalytics.h  NavApiLaneInformation.cpp  NavApiNavUtils.cpp  NavApiNavigation.cpp  NavApiPreferences.cpp  NavApiRouteInformation.cpp  NavApiRouteOptions.cpp  NavApiRouteRequest.cpp  NavApiRouteSummaryInformation.cpp  NavApiRouteSummaryRequest.cpp  NavApiSpecialRegionInformation.cpp  NavApiSpeedLimitInformation.cpp  NavApiTypes.cpp  NavMockGPSProvider.cpp  NavMockGPSProvider.h  NavTask.h  NavigationHelper.cpp  NavigationHelper.h  NavigationImpl.cpp  NavigationImpl.h  NavigationImplNotifier.cpp  NavigationImplNotifier.h  Place.cpp
navigationkit/qt/Supportfiles/: current_voice.txt
navigationkit/qt/include/: navigation.h  navigationtypes.h  routesummaryrequest.h
navigationkit/qt/project/: navigationkit.pro
navigationkit/qt/src/: announcementhelperlistener.cpp  announcementimpl.cpp  enhancednavigationstartuphelplistener.cpp  laneimpl.cpp  laneinformationimpl.cpp  maneuverimp.cpp  maneuverlistimp.cpp  navigationimpl.cpp  navigationlocation.cpp  preferences.cpp  roadsignimpl.cpp  routeinformationimp.cpp  routeoptions.cpp  routepositionhelperlistener.cpp  routesummaryhelperlistener.cpp  routesummaryinformationImpl.cpp  routesummaryrequestimpl.cpp  sessionhelperlistener.cpp  specialregionhelperlistener.cpp  specialregioninformationimpl.cpp  speedlimitinformationimpl.cpp  trafficeventimp.cpp  traffichelperlistener.cpp  trafficinformationimp.cpp  typetranslater.cpp
navigationuikit/c/include/: NKUIController.h  NKUIData.h  NKUIEvent.h  NKUIEventListener.h  NKUIListener.h  NKUILocation.h  NKUIMapDataType.h  NKUIMapInterface.h  NKUIMenuCommand.h  NKUIPresenter.h  NKUIPublicState.h  NKUISharedInformation.h  NKUIStateID.h  NKUIStringHelper.h  NKUIWidgetLayoutConfig.h  NKUIWidgetManager.h
navigationuikit/c/projects/cmake/: CMakeLists.txt
navigationuikit/c/resources/: WidgetLayoutExample.xml  version.gen.txt
navigationuikit/c/src/: NKUIContext.cpp  NKUIController.cpp  NKUIWidgetLayoutConfig.cpp
navigationuikit/qt/include/: navigationuikit.h  navigationuimapinterface.h  navuipreferences.h  navuirouteoptions.h
navigationuikit/qt/project/: navigationuikit.pro
navigationuikit/qt/resource/: WidgetLayoutConfig.xml
navigationuikit/qt/src/: localizedstringhelperimpl.cpp  locationproviderlistener.cpp  mapinterfacewrapper.cpp  navigationuikitimpl.cpp  navigationuikitwrapper.cpp  navuipreferences.cpp  navuirouteoptions.cpp  typetranslater.cpp
searchkit/c/: search_w32.sln
searchkit/c/include/: AnalyticsSearchEvent.h  AnalyticsSearchEventManager.h  AnalyticsTypes.h  LocalPlaceManager.h  SearchHistoryManager.h  ShortcutManager.h  SingleSearchConfiguration.h  SingleSearchInformation.h  SingleSearchListener.h  SingleSearchRequest.h  SuggestListManager.h
searchkit/c/projects/cmake/: CMakeLists.txt
searchkit/c/src/: AnalyticsSearchEventManager.cpp  LocalPlaceManager.cpp  (+12 more)
(+7153 files in other folders)
